fix: change picker z-index to 10 🐛

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
   position: relative;
   &__content {
     position: absolute;
-    z-index: 1;
+    z-index: 5;
     top: 26px;
     border: 1px solid #32a8fd;
     border-radius: 10px;
